# poultry-env

./: .gitignore  hardware_manager.py  main.py  pyproject.toml  requirements.txt  styles.css
fritzing/: main_diagram.fzz  search.fzbz
tests/: dht.py  ky.py  mh.py  pir.py
